fixed an issue with the elements overflowing

--- a/html_files/css_files/cart.css
+++ b/html_files/css_files/cart.css
@@ -6,10 +6,11 @@ body {
 }
 
 .cart_form {
-    margin-top: 100px;
-    margin-left: 400px;
-    margin-right: 400px;
-    margin-bottom: 100px;
+
+    margin-top: 8%;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 8%;
 }
 
 .btn {
@@ -21,8 +22,14 @@ body {
     height: 50px;
     border-radius: 10px;
     cursor: pointer;
-    transition: width 0.25s, height 0.25s;
+    transition: transform 0.25s;
     border: 0px;
+}
+
+.btn.back_to_menu {
+    width: 100px;
+    height: 45px;
+    margin-bottom: 20px;
 }
 
 .submit {
@@ -36,29 +43,32 @@ body {
 
 .btn:active {
     background-color: #317033;
-    width: 110px;
-    height: 45px;
+    transform: scale(0.9);
+}
+
+table {
+    width: 100%;
 }
 
 .left {
+    width: 55%;
     /* background-color: #317033; */
-    width: 50%;
-    float: left;
-    height: 100%;
+    vertical-align: top;
+    /* box-sizing: border-box; */
 }
 
 .right {
+    width: 45%;
     /* background-color: #4caf4f; */
-    width: 50%;
-    float: right;
-    height: 100%;
+    vertical-align: top;
+    /* box-sizing: border-box; */
 }
 
-.entire:after {
+/* .entire:after {
     content: "";
     display: table;
     clear: both;
-}
+} */
 
 .bottom {
     margin-top: 30px;
@@ -66,17 +76,21 @@ body {
 }
 
 .fields {
+    box-sizing: border-box;
     border-radius: 8px;
     border-style: solid;
-    width: 94.5%;
-    /* margin-top: 10px; */
-    margin-left: 5px;
-    margin-bottom: 8px;
-    margin-right: 5px;
+    width: 100% - 6px;
+
+    margin-top: 10px;
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-bottom: 10px;
+
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 15px;
     padding-bottom: 15px;
+
     background-color: transparent;
     backdrop-filter: blur(10px);
     border-color: rgb(95, 192, 160);
@@ -90,14 +104,14 @@ body {
 
 .address_box {
     display: block;
-    width: 95%;
+    width: 98%;
     height: 40px;
     border-radius: 5px;
     background-color: transparent;
     border: 0px;
     box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.3);
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 1%;
+    padding-right: 1%;
     font-size: large;
     caret-color: aqua;
     color: azure;
@@ -140,22 +154,8 @@ a:link, a:visited, a:hover, a:active {
     border-top: 0;
     border-bottom-width: 2px;
     border-style: solid; 
-    /* position: relative; */
-    /* border-color: rgb(240, 192, 121);  */
+    position: relative;
     border-image: linear-gradient(.25turn, aqua, rgba(0, 0, 0, 0) 75%) 1;
-
-    /* max-width: 250px;
-     border-top: 0px;
-    border-bottom: 2px;
-    border-left: 0px;
-    border-right: 0px ;
-    max-height: 50px;
-    padding: 1rem;
-    color: aqua;
-    border-width: 2px;
-    border-style: solid;
-    border-image: 
-        linear-gradient(to right, white, rgba(0, 0, 0, 0)) 0 100%; */
 }
 
 .text {
@@ -233,3 +233,7 @@ a {
     width: 25px;
     height: 25px;
 }
+
+/* @media screen and (min-width: 801px) {
+    
+} */
